@@ -1,3 +1,10 @@
+Thu Jan 26 21:14:59 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>
+
+        * dds/DCPS/RTPS/Sedp.cpp:
+
+          Fix ignore bug in checking for topic.
+          Extra logging for compatibility checks (level > 3).
+
 Thu Jan 26 20:52:41 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * tests/transport/rtps_reliability/rtps_reliability.cpp:
